--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ function myFunction() {
                         W340 Westgate Building <br>
                         <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> <br>
                         <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a><br> University Park, PA, 16802 <br>
-                        <a href="mailto:ashutosh13@gmail.com" target="_blank"><img width=32 src="images/mail.ico" style="vertical-align:middle" display="inline"> <img width=180 src="images/email-id.png" style="vertical-align:middle" display="inline"></a><br><br>
+                        <a href="mailto:ashutosh13@gmail.com" target="_blank"><img width=32 src="images/mail.png" style="vertical-align:middle" display="inline"> <img width=180 src="images/email-id.png" style="vertical-align:middle" display="inline"></a><br><br>
 <!--
 <p><b>Email</b> : <label class="unselectable">ashutosh@cse.psu.edu</label>  <br>
 -->
