updated sigmetrics pre-print pdf

--- a/publications.html
+++ b/publications.html
@@ -212,9 +212,9 @@ function myFunction() {
 <!-- <h1>2017</h1> -->
 <!-- <body { font-family: "Andale Mono"; }> -->
 <p><font style="color:darkblue;font-family: garamond;"><b>[C8] SIGMETRICS 2019: Quantifying Data Locality in Dynamic Parallelism in GPUs
-	<!-- <a href="https://ashutoshpattnaik.github.io/docs/2019_SIGMETRICS_Xulong.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> 
-	<a href="https://ashutoshpattnaik.github.io/ppt/2019_SIGMETRICS_Xulong.pptx" target="_blank"><img width=32 src="images/ppt-icon.png" style="vertical-align:middle;">
-	</a> </a>  -->
+	<a href="https://ashutoshpattnaik.github.io/docs/2019_SIGMETRICS_Xulong.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> 
+	<!-- <a href="https://ashutoshpattnaik.github.io/ppt/2019_SIGMETRICS_Xulong.pptx" target="_blank"><img width=32 src="images/ppt-icon.png" style="vertical-align:middle;"></a> -->
+   </a> 
 </font></b><br /> 
 <font style="font-family: garamond">Xulong Tang, <b>Ashutosh Pattnaik</b>, Onur Kayiran, Adwait Jog, Mahmut T. Kandemir, Chita R. Das</font></p>
 
