verify from google

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   color: white;
 }
 </style><!-- End of Squarespace Headers -->
+<meta name="google-site-verification" content="wel0yyM6c1--noP0vrKZnIF28od63tgae_uu-ivSOuQ" />
 <!-- <script src="./assets1/site-bundle.js" type="text/javascript"></script> -->
 </head>
 
