--- a/index.html
+++ b/index.html
@@ -248,16 +248,16 @@ function myFunction() {
 
 <h2>About Me</h2>
 <p align="justify" style="text-align:justify" style="font-size:115%">
-  I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">Penn State</a>. I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. and <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a>. 
+  I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">Penn State</a>. I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>, <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> and <a href="http://www.cse.psu.edu/~axs53/" target="_blank">Dr. Anand Sivasubramaniam</a>.
   <!-- I also collaborate with <a href="http://users.ece.cmu.edu/~omutlu/">Dr. Onur Mutlu</a>. -->
 </p>
 
 <h2>CURRENT RESEARCH</h2>
 <p align="justify" style="text-align:justify" style="font-size:115%">
  My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.
- I am currently working on understanding the research issues and opportunities involved in processing in memory in GPUs. 
- Specifically, I am trying to understand the issues of "which" computations to offload to the PIM processors, and "how" to
- co-locate the computations and data to minimize the data movements in a GPU system while improving performance.
+ I am currently working on understanding the research issues and opportunities involved in processing away from compute units in GPUs. 
+ Specifically, I am trying to understand the issues of "which" computations to offload and "how" to
+ co-locate the computations and data to minimize the data movements in a GPU system while improving performance and energy-efficiency.
 </p>
 
 </div></div></div></div></div>
