--- a/publications.html
+++ b/publications.html
@@ -211,13 +211,13 @@ function myFunction() {
 <!-- <iframe src="https://scholar.google.com/citations?user=wVVAv80AAAAJ"></iframe> -->
 <!-- <h1>2017</h1> -->
 <!-- <body { font-family: "Andale Mono"; }> -->
-<p><font style="color:darkblue;font-family: garamond;"><b>[C9] ISCA 2019: Opportunistic Computing in GPU Architectures
+<p><font style="color:darkblue;font-family: garamond;"><b>[C8] ISCA 2019: Opportunistic Computing in GPU Architectures
   <!-- <a href="https://ashutoshpattnaik.github.io/docs/2019_ISCA_Ashutosh.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> </a>  -->
 </font></b><br /> 
-<font style="font-family: garamond"><b>Ashutosh Pattnaik</b>, Xulong Tang, Onur Kayiran, Adwait Jog, Asit Mishra, Mahmut T. Kandemir, Anand Sivasubramaniam, Chita R. Das</font></p>
+<font style="font-family: garamond"><b>Ashutosh Pattnaik</b>, Xulong Tang, Onur Kayiran, Adwait Jog, Asit Mishra, Mahmut T. Kandemir,<br /> Anand Sivasubramaniam, Chita R. Das</font></p>
 
 
-<p><font style="color:darkblue;font-family: garamond;"><b>[C8] SIGMETRICS 2019: Quantifying Data Locality in Dynamic Parallelism in GPUs
+<p><font style="color:darkblue;font-family: garamond;"><b>[J1] SIGMETRICS 2019: Quantifying Data Locality in Dynamic Parallelism in GPUs
 	<a href="https://ashutoshpattnaik.github.io/docs/2019_SIGMETRICS_Xulong.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> 
 	<!-- <a href="https://ashutoshpattnaik.github.io/ppt/2019_SIGMETRICS_Xulong.pptx" target="_blank"><img width=32 src="images/ppt-icon.png" style="vertical-align:middle;"></a> -->
    </a> 
