--- a/publications.html
+++ b/publications.html
@@ -212,7 +212,7 @@ function myFunction() {
 <!-- <h1>2017</h1> -->
 <!-- <body { font-family: "Andale Mono"; }> -->
 <p><font style="color:darkblue;font-family: garamond;"><b>[C8] ISCA 2019: Opportunistic Computing in GPU Architectures
-  <!-- <a href="https://ashutoshpattnaik.github.io/docs/2019_ISCA_Ashutosh.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> </a>  -->
+  <a href="https://ashutoshpattnaik.github.io/docs/2019_ISCA_Ashutosh.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> </a> 
 </font></b><br /> 
 <font style="font-family: garamond"><b>Ashutosh Pattnaik</b>, Xulong Tang, Onur Kayiran, Adwait Jog, Asit Mishra, Mahmut T. Kandemir,<br /> Anand Sivasubramaniam, Chita R. Das</font></p>
 
