--- a/activities.html
+++ b/activities.html
@@ -205,6 +205,7 @@ function myFunction() {
 			<tr>
 						<td>
 							<h2>SERVICE</h2>
+              <b>Submission and Web Chair</b>, <a href="https://insight-archlab.github.io/gpgpu.html#org" target="_blank">GPGPU 2019, Providence, RI</a><br>
 							<b>Submission Chair</b>, <a href="http://ics16.bilkent.edu.tr/committees.htm" target="_blank">ICS 2016, Turkey </a><br>
 							<b>Reviewer</b>: <br>
 							<li>IEEE Transactions on Parallel and Distributed Systems (TPDS)</li>
