--- a/activities.html
+++ b/activities.html
@@ -223,15 +223,14 @@ function myFunction() {
 					<h2>AWARDS</h2>
 					<ul>
 						<li>Student Travel Grant:
-							<ul><li>ISCA 2017
+							<ul>
+								<li>2019: NSF Travel Grant for SIGMETRICS, Travel Grant for ISCA
 								</li>
-								<li>HPCA 2017
+								<li>2017: IEEE Travel Grant for HPCA, ACM SIGARCH Travel Grant for ISCA
 								</li>
-								<li>PACT 2016
+								<li>2016: ACM SIGMETRICS Travel Grant, NSF Travel Grant for PACT
 								</li>
-								<li>SIGMETRICS 2016
-								</li>
-								<li>ISCA 2015
+								<li>2015: ACM SIGARCH Travel Grant for ISCA
 								</li>
 							</ul>
 						</td>
