--- a/publications.html
+++ b/publications.html
@@ -6,12 +6,9 @@
 
   
   <meta name="viewport" content="initial-scale=1">
-  
-  <!-- This is Squarespace. --><!-- ashutosh-pattnaik -->
 <!--<base href="">--><base href=".">
 
 <title> Ashutosh Pattnaik</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://static.squarespace.com/universal/default-favicon.ico">
 <link rel="canonical" href="https://ashutoshpattnaik.github.io/">
 <meta property="og:site_name" content=" Ashutosh Pattnaik">
 <meta property="og:title" content="Home">
@@ -19,16 +16,7 @@
 <meta property="og:type" content="website">
 <meta itemprop="name" content="Home">
 <meta itemprop="url" content="https://ashutoshpattnaik.github.io/">
-<meta name="twitter:title" content="Home">
-<meta name="twitter:url" content="https://ashutoshpattnaik.github.io/">
-<meta name="twitter:card" content="summary">
-<meta name="description" content="">
 <link rel="stylesheet" type="text/css" href="./assets1/css">
-<script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
-<script>(function(rollups, name) { if (!rollups[name]) { rollups[name] = {}; } rollups[name].js = ["//static.squarespace.com/universal/scripts-compressed/common-ab96aba6c1b4bf7ac6ef-min.en-US.js"]; })(SQUARESPACE_ROLLUPS, 'squarespace-common');</script>
-<!-- <script crossorigin="anonymous" src="./assets1/common-ab96aba6c1b4bf7ac6ef-min.en-US.js.download"></script> -->
-<!-- <script crossorigin="anonymous" src="./assets1/performance-1e9472e42012af61393e-min.en-US.js.download" defer=""></script> -->
-<script type="text/javascript"> SquarespaceFonts.loadViaContext(); Squarespace.load(window);</script> 
 <!--[if !IE]> --><link rel="stylesheet" type="text/css" href="./assets1/site.css"><!-- <![endif]-->
 <style type="text/css">
   body, p, nav li, li {
@@ -73,7 +61,7 @@ line-height: 1.7em;
   color: white;
 }
 
-</style><!-- End of Squarespace Headers -->
+</style>
   <!-- <script src="./assets1/site-bundle.js.download" type="text/javascript"></script> -->
 </head>
 
