--- a/activities.html
+++ b/activities.html
@@ -6,11 +6,9 @@
   <meta name="viewport" content="initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
-  <!-- This is Squarespace. --><!-- ashutosh-pattnaik -->
 <!--<base href="">--><base href=".">
 
 <title> Ashutosh Pattnaik</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://static.squarespace.com/universal/default-favicon.ico">
 <link rel="canonical" href="https://ashutoshpattnaik.github.io/">
 <meta property="og:site_name" content=" Ashutosh Pattnaik">
 <meta property="og:title" content="Home">
@@ -18,16 +16,7 @@
 <meta property="og:type" content="website">
 <meta itemprop="name" content="Home">
 <meta itemprop="url" content="https://ashutoshpattnaik.github.io/">
-<meta name="twitter:title" content="Home">
-<meta name="twitter:url" content="https://ashutoshpattnaik.github.io/">
-<meta name="twitter:card" content="summary">
-<meta name="description" content="">
 <link rel="stylesheet" type="text/css" href="./assets1/css">
-<script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
-<script>(function(rollups, name) { if (!rollups[name]) { rollups[name] = {}; } rollups[name].js = ["//static.squarespace.com/universal/scripts-compressed/common-ab96aba6c1b4bf7ac6ef-min.en-US.js"]; })(SQUARESPACE_ROLLUPS, 'squarespace-common');</script>
-<!-- <script crossorigin="anonymous" src="./assets1/common-ab96aba6c1b4bf7ac6ef-min.en-US.js.download"></script> -->
-<!-- <script crossorigin="anonymous" src="./assets1/performance-1e9472e42012af61393e-min.en-US.js.download" defer=""></script> -->
-<script type="text/javascript"> SquarespaceFonts.loadViaContext(); Squarespace.load(window);</script> 
 <!--[if !IE]> --><link rel="stylesheet" type="text/css" href="./assets1/site.css"><!-- <![endif]-->
 <style type="text/css">
   body, p, nav li, li {
@@ -71,8 +60,7 @@ line-height: 1.7em;
   background-color: black;
   color: white;
 }
-</style><!-- End of Squarespace Headers -->
-  <!-- <script src="./assets1/site-bundle.js.download" type="text/javascript"></script> -->
+</style>
 </head>
 
 <body class="page-borders-thick canvas-style-normal  header-subtitle-address banner-alignment-center blog-layout-center project-layout-left-sidebar thumbnails-on-open-page-show-all social-icon-style-round    hide-page-title   hide-article-author    event-thumbnails event-thumbnail-size-32-standard event-date-label event-date-label-time event-list-show-cats event-list-date event-list-time event-list-address   event-icalgcal-links  event-excerpts  event-item-back-link    product-list-titles-under product-list-alignment-center product-item-size-32-standard product-image-auto-crop product-gallery-size-11-square product-gallery-auto-crop show-product-price show-product-item-nav product-social-sharing newsletter-style-dark  opentable-style-light small-button-style-solid small-button-shape-square medium-button-style-solid medium-button-shape-square large-button-style-solid large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-outline button-corner-style-square tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-5324b571e4b05d171ab8ded8 collection-type-page collection-layout-default homepage mobile-style-available site-title" id="collection-5324b571e4b05d171ab8ded8">
