--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@ line-height: 1.7em;
 
 <body class="page-borders-thick canvas-style-normal  header-subtitle-address banner-alignment-center blog-layout-center project-layout-left-sidebar thumbnails-on-open-page-show-all social-icon-style-round    hide-page-title   hide-article-author    event-thumbnails event-thumbnail-size-32-standard event-date-label event-date-label-time event-list-show-cats event-list-date event-list-time event-list-address   event-icalgcal-links  event-excerpts  event-item-back-link    product-list-titles-under product-list-alignment-center product-item-size-32-standard product-image-auto-crop product-gallery-size-11-square product-gallery-auto-crop show-product-price show-product-item-nav product-social-sharing newsletter-style-dark  opentable-style-light small-button-style-solid small-button-shape-square medium-button-style-solid medium-button-shape-square large-button-style-solid large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-outline button-corner-style-square tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-5324b571e4b05d171ab8ded8 collection-type-page collection-layout-default homepage mobile-style-available site-title" id="collection-5324b571e4b05d171ab8ded8">
 
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
 <script>
 // When the user scrolls down 20px from the top of the document, show the button
 window.onscroll = function() {scrollFunction()};
@@ -136,27 +136,10 @@ function myFunction() {
           <a href="https://ashutoshpattnaik.github.io/"> Ashutosh Pattnaik</a>
         </h1>
       </div>
-      <script>
-      if (parseInt(Y.one('body').getComputedStyle('width'),10) <= 640) {
-        Y.use('squarespace-ui-base', function(Y) {
-          Y.one("#upper-logo .logo").plug(Y.Squarespace.TextShrink, {
-            parentEl: Y.one('#upper-logo')
-          });
-        });
-      }
-      </script>
 
       <div id="lower-logo">
         <h1 class="logo" data-content-field="site-title" data-shrink-original-size="26" style="letter-spacing: 0.115385em;"><a href="https://ashutoshpattnaik.github.io/"> Ashutosh Pattnaik</a></h1>
       </div>
-      <script>
-        Y.use('squarespace-ui-base', function(Y) {
-          Y.one("#lower-logo .logo").plug(Y.Squarespace.TextShrink, {
-            parentEl: Y.one('#lower-logo')
-          });
-        });
-      </script>
-
     
       <div id="topNav">
   <nav class="main-nav" data-content-field="navigation">
