updated with micro

--- a/publications.html
+++ b/publications.html
@@ -181,6 +181,12 @@ function myFunction() {
 <!-- <iframe src="https://scholar.google.com/citations?user=wVVAv80AAAAJ"></iframe> -->
 <!-- <h1>2017</h1> -->
 <!-- <body { font-family: "Andale Mono"; }> -->
+	<p><font style="color:darkblue;font-family: garamond;"><b>[C9] MICRO 2019: Distilling the Essence of Raw Video to Reduce Memory Usage and Energy at Edge Devices
+  <!-- <a href="https://ashutoshpattnaik.github.io/docs/2019_MICRO_Haibo.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> </a> -->
+</font></b><br /> 
+<font style="font-family: garamond">Haibo Zhang, Shulin Zhao, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir,<br /> Anand Sivasubramaniam, Chita R. Das</font></p>
+
+
 <p><font style="color:darkblue;font-family: garamond;"><b>[C8] ISCA 2019: Opportunistic Computing in GPU Architectures
   <a href="https://ashutoshpattnaik.github.io/docs/2019_ISCA_Ashutosh.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> </a>
   <a href="https://www.youtube.com/watch?v=xckzft1Ckss" target="_blank"> <img width=32 src="images/video.png" style="vertical-align:middle;"> </a> 
