--- a/publications.html
+++ b/publications.html
@@ -184,7 +184,7 @@ function myFunction() {
 	<p><font style="color:darkblue;font-family: garamond;"><b>[C9] MICRO 2019: Distilling the Essence of Raw Video to Reduce Memory Usage and Energy at Edge Devices
   <!-- <a href="https://ashutoshpattnaik.github.io/docs/2019_MICRO_Haibo.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> </a> -->
 </font></b><br /> 
-<font style="font-family: garamond">Haibo Zhang, Shulin Zhao, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir,<br /> Anand Sivasubramaniam, Chita R. Das</font></p>
+<font style="font-family: garamond">Haibo Zhang, Shulin Zhao, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Anand Sivasubramaniam, Chita R. Das</font></p>
 
 
 <p><font style="color:darkblue;font-family: garamond;"><b>[C8] ISCA 2019: Opportunistic Computing in GPU Architectures
@@ -228,6 +228,10 @@ function myFunction() {
 
 	<h1>TALKS & PRESENTATIONS</h1>
 	<ol style="padding-left: 15px;">
+    <li style="margin: 10px 0;"><b><font style="color:darkblue;font-family: garamond;"> Opportunistic Computing in GPU Architectures. </font></b> Phoenix, AZ, USA, ISCA 2019<br>
+    </li>
+    <li style="margin: 10px 0;"><b><font style="color:darkblue;font-family: garamond;"> Quantifying Data Locality in Dynamic Parallelism in GPUs. </font></b> Phoenix, AZ, USA, SIGMETRICS 2019<br>
+    </li>
 		<li style="margin: 10px 0;"><b><font style="color:darkblue;font-family: garamond;"> Scheduling Techniques for GPU Architectures with Processing-In-Memory Capabilities. </font></b> Haifa, Israel, PACT 2016<br>
 		</li>
 		<li style="margin: 10px 0"><b><font style="color:darkblue;font-family: garamond;">µC-States: Fine-grained GPU Datapath Power Management. </font></b> Haifa, Israel, PACT 2016<br>
