--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@ function myFunction() {
 
 </div>
 <!-- </div> -->
+<h2>News</h2>
+<p align="justify" style="text-align:justify" style="font-size:115%">
+  I have succesfully defended my Ph.D. dissertation titled "Be(-A)ware of Data Movement: Optimizing Throughput Processors for Efficient Computations".
+  I will soon be joining <a href="https://www.arm.com" target="_blank">ARM</a> as a Senior GPU Architect.
+</p>
 
 <h2>About Me</h2>
 <p align="justify" style="text-align:justify" style="font-size:115%">
