Updated Website with new info.

--- a/activities.html
+++ b/activities.html
@@ -171,16 +171,22 @@ function myFunction() {
       <!-- // CATEGORY NAV -->
 <!-- </div> -->
 <table class="imgtable"><tbody>
-			<col width="550">
-			<col width="350">
+<!-- 			<col width="550">
+			<col width="500"> -->
 			<tr>
 						<td>
 							<h2>SERVICE</h2>
-              <b>Submission and Web Chair</b>, <a href="https://insight-archlab.github.io/gpgpu.html#org" target="_blank">GPGPU 2019, Providence, RI</a><br>
+              <b>Session Chair: GPUs</b>,<a href="https://www.hpca-conf.org/2020/main-program/" target="_blank"> HPCA 2020, San Diego, CA</a><br>
+              <b>External Review Committee Member</b>, <a href="https://www.hpca-conf.org/2020/external-review-committee/" target="_blank"> HPCA 2020, San Diego, CA</a><br>
+              <b>General Co-Chair</b>, <a href="https://insight-archlab.github.io/gpgpu.html#org" target="_blank">GPGPU 2020, San Diego, CA</a><br>
+              <b>Submission and Web Chair</b>, <a href="https://insight-archlab.github.io/gpgpu12.html#org" target="_blank">GPGPU 2019, Providence, RI</a><br>
 							<b>Submission Chair</b>, <a href="http://ics16.bilkent.edu.tr/committees.htm" target="_blank">ICS 2016, Turkey </a><br>
 							<b>Reviewer</b>: <br>
 							<li>IEEE Transactions on Parallel and Distributed Systems (TPDS)</li>
 							<li>IEEE Transactions on Cloud Computing (TCC) </li>
+              <li>IEEE Micro </li>
+              <li>IEEE Transactions on Architecture and Code Optimization (TACO) </li>
+              <li>IEEE Transactions on Computers (TC) </li>
 							<li>Microprocessors and Microsystems, Elsevier </li>
 							<li>ETRI Journal, Wiley </li>
 						<!--	On-behalf reviewer for:
@@ -190,9 +196,13 @@ function myFunction() {
 								<li><p>2014 (MICRO, ICCAD)</p></li>
 							</ul> -->
 						</td>
+          </tr>
+          <tr>
 				<td>
 					<h2>AWARDS</h2>
 					<ul>
+            <li> <b>Best Paper Award</b> for the paper titled "Measuring and Modeling On-Chip Interconnect Power on Real Hardware" at <a href="http://www.iiswc.org/iiswc2016/" target="_blank">IISWC 2016</a>
+            </li>
 						<li>Student Travel Grant:
 							<ul>
 								<li>2019: NSF Travel Grant for SIGMETRICS, Travel Grant for ISCA
@@ -213,15 +223,16 @@ function myFunction() {
 												<td>
 							<h2>MEMBERSHIPS</h2>
 							<ul>
-								<li><a href="http://www.ieee.org/" target="_blank">IEEE Student Member</a>
+								<li><a href="http://www.ieee.org/" target="_blank">IEEE Young Professional</a>
 								</li>
-								<li><a href="http://www.acm.org/" target="_blank">ACM Student</a> 
+								<li><a href="http://www.acm.org/" target="_blank">ACM Professional</a> 
 								</li>
 								<li><a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a> </li>
 								<li><a href="http://www.sigmetrics.org/" target="_blank">ACM SIGMETRICS</a> 
 								</li>
 							</ul>
 						</td>
+            <tr>
 						<td>
 							<h2>OUTSIDE ACADS</h2>
 							<ul>
