--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function myFunction() {
               <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-ebb91f8c6286d0c5c81f">
                 <div class="sqs-block-content">
                  <p align="center">
-                  <img src="./images/website_photo.jpg" alt="" width="211px" height="260px">&nbsp;</p>
+                  <img src="./images/website_photo.png" alt="" width="211px" height="260px">&nbsp;</p>
                 </div></div></div>
 
                 <div class="col sqs-col-8 span-1">
@@ -216,22 +216,23 @@ function myFunction() {
 <!-- </div> -->
 <h2>News</h2>
 <p align="justify" style="text-align:justify" style="font-size:115%">
-  I have succesfully defended my Ph.D. dissertation titled "Be(-A)ware of Data Movement: Optimizing Throughput Processors for Efficient Computations".
-  I will soon be joining <a href="https://www.arm.com" target="_blank">ARM</a> as a Senior GPU Architect.
+  Paper titled "NEBULA: A Neuromorphic Spin-Based Ultra-Low Power Architecture for SNNs and ANNs" accepted at <a href="https://www.iscaconf.org/isca2020/program/" target="_blank">ISCA 2020</a>!
 </p>
 
 <h2>About Me</h2>
 <p align="justify" style="text-align:justify" style="font-size:115%">
-  I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">Penn State</a>. I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>, <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> and <a href="http://www.cse.psu.edu/~axs53/" target="_blank">Dr. Anand Sivasubramaniam</a>.
-  <!-- I also collaborate with <a href="http://users.ece.cmu.edu/~omutlu/">Dr. Onur Mutlu</a>. -->
+	Since September 2019, I have been working as a Senior GPU Architect at <a href="https://www.arm.com" target="_blank">ARM</a>.
+	Prior to this I was a PhD student in the  <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">Penn State University</a>. 
+	My thesis advisors are <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>, <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> and <a href="http://www.cse.psu.edu/~axs53/" target="_blank">Dr. Anand Sivasubramaniam</a>. I have also collaborated with <a href="https://sites.psu.edu/vijaykrishnannarayanan/">Dr. Vijaykrishnan Narayanan (Penn State)</a> and <a href="https://people.inf.ethz.ch/omutlu/">Dr. Onur Mutlu (CMU)</a>.
 </p>
 
-<h2>CURRENT RESEARCH</h2>
+<h2>PhD RESEARCH</h2>
 <p align="justify" style="text-align:justify" style="font-size:115%">
- My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.
- I am currently working on understanding the research issues and opportunities involved in processing away from compute units in GPUs. 
- Specifically, I am trying to understand the issues of "which" computations to offload and "how" to
- co-locate the computations and data to minimize the data movements in a GPU system while improving performance and energy-efficiency.
+ My PhD research focused on designing high performance energy-efficient heterogeneous GPU architectures.
+ I worked on understanding the research issues and opportunities involved in processing away from compute units in GPUs. 
+ Specifically, I researched on understanding the issues of "which" computations to offload and "how" to
+ co-locate the computations and data to minimize the data movements in a GPU system while improving performance and energy-efficiency. <br>
+ My PhD thesis titled "Be(-A)ware of Data Movement: Optimizing Throughput Processors for Efficient Computations" can be found <a href="https://etda.libraries.psu.edu/files/final_submissions/20328">here <img width=24 src="images/pdf-icon.png" style="vertical-align:middle;"></a>.
 </p>
 
 </div></div></div></div></div>
