--- a/publications.html
+++ b/publications.html
@@ -181,6 +181,13 @@ function myFunction() {
 <!-- <iframe src="https://scholar.google.com/citations?user=wVVAv80AAAAJ"></iframe> -->
 <!-- <h1>2017</h1> -->
 <!-- <body { font-family: "Andale Mono"; }> -->
+
+  <p><font style="color:darkblue;font-family: garamond;"><b>[C11] ISCA 2020: NEBULA: A Neuromorphic Spin-Based Ultra-Low Power Architecture for SNNs and ANNs
+  <a href="https://ashutoshpattnaik.github.io/docs/2020_ISCA_Sonali.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> </a>
+</font></b><br />
+<font style="font-family: garamond">Sonali Singh, Anup Sarma, Nicholas Jao, <b>Ashutosh Pattnaik</b>, Sen Lu, Kezhou Yang, Abhronil Sengupta, Vijaykrishnan Narayanan, Chita Das </font></p>
+
+
 	<p><font style="color:darkblue;font-family: garamond;"><b>[C10] MICRO 2019: Distilling the Essence of Raw Video to Reduce Memory Usage and Energy at Edge Devices
   <!-- <a href="https://ashutoshpattnaik.github.io/docs/2019_MICRO_Haibo.pdf" target="_blank"> <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"> </a> -->
 </font></b><br />
