New Resume and small fix in website

--- a/activities.html
+++ b/activities.html
@@ -225,10 +225,13 @@ function myFunction() {
 							<ul>
 								<li><a href="http://www.ieee.org/" target="_blank">IEEE Young Professional</a>
 								</li>
+                <li><a href="http://www.ieee.org/" target="_blank">IEEE Computer Society</a>
+                </li>
 								<li><a href="http://www.acm.org/" target="_blank">ACM Professional</a> 
 								</li>
 								<li><a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a> </li>
-								<li><a href="http://www.sigmetrics.org/" target="_blank">ACM SIGMETRICS</a> 
+
+								<!-- <li><a href="http://www.sigmetrics.org/" target="_blank">ACM SIGMETRICS</a>  -->
 								</li>
 							</ul>
 						</td>
