fixed address and added CV icon

--- a/index.html
+++ b/index.html
@@ -193,22 +193,29 @@ function myFunction() {
                 <div class="col sqs-col-8 span-1">
                   <div class="sqs-block form-block sqs-block-form" data-block-type="9" id="block-bfde1914caf7d2626029">
                     <div class="sqs-block-content">
-                      <p align="left">
-                        Ph.D. Candidate <br>
-                        W340 Westgate Building <br>
-                        <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> <br>
-                        <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a><br> University Park, PA, 16802 <br>
-                        <a href="mailto:ashutosh13@gmail.com" target="_blank"><img width=32 src="images/mail.png" style="vertical-align:middle" display="inline"> <img width=180 src="images/email-id.png" style="vertical-align:middle" display="inline"></a><br><br>
+                      <!-- <p align="left"> -->
+                      	<h2>About Me</h2>
+<p align="justify" style="text-align:justify" style="font-size:115%">
+	Since September 2019, I have been working as a Senior GPU Architect at <a href="https://www.arm.com" target="_blank">ARM</a>.
+	Prior to this I was a PhD student in the  <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">Penn State University</a>. 
+	My thesis advisors are <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>, <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> and <a href="http://www.cse.psu.edu/~axs53/" target="_blank">Dr. Anand Sivasubramaniam</a>. I have also collaborated with <a href="https://sites.psu.edu/vijaykrishnannarayanan/">Dr. Vijaykrishnan Narayanan (Penn State)</a> and <a href="https://people.inf.ethz.ch/omutlu/">Dr. Onur Mutlu (CMU)</a>.
+</p>
+                        <!-- Ph.D. Candidate <br> -->
+                        <!-- W340 Westgate Building <br> -->
+                        <!-- <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> <br> -->
+                        <!-- <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a><br> University Park, PA, 16802 <br> -->
+                        <a href="AshutoshPattnaik-Public.pdf" target="_blank"><img width=32 src="images/cv.png" style="vertical-align:middle" display="inline"></a>&emsp;
+                        <a href="mailto:ashutosh13@gmail.com" target="_blank"><img width=32 src="images/mail.png" style="vertical-align:middle" display="inline"></a>&emsp;
 <!--
 <p><b>Email</b> : <label class="unselectable">ashutosh@cse.psu.edu</label>  <br>
 -->
-
-<a href="AshutoshPattnaik-Public.pdf" target="_blank">Curriculum Vitae <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"></a>&emsp;
-<a href="https://goo.gl/maps/LPW7pczjzW62" target="_blank"><img width=32 src="images/gmaps.ico" style="vertical-align:middle" display="inline"></a>&emsp;
+<!-- <a href="https://goo.gl/maps/LPW7pczjzW62" target="_blank"><img width=32 src="images/gmaps.ico" style="vertical-align:middle" display="inline"></a>&emsp; -->
+<a href="https://dblp.org/pid/169/7812.html" target="_blank"><img width=32 src="images/dblp.png" style="vertical-align:middle" display="inline"></a>&emsp;
 <a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ" target="_blank" data-toggle="popover" title="Popover Header" data-content="Google Maps"><img width=32 src="images/gscholar.ico" style="vertical-align:middle"></a>&emsp;
 <a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank"><img width=32 src="images/linkedin.ico" style="vertical-align:middle"></a>&emsp;
+
 <!--<a href="footprints.html">Ph.D. Footprint</a>-->
-</p>
+<!-- </p> -->
 
 </div></div></div>
 
@@ -219,12 +226,7 @@ function myFunction() {
   Paper titled "NEBULA: A Neuromorphic Spin-Based Ultra-Low Power Architecture for SNNs and ANNs" accepted at <a href="https://www.iscaconf.org/isca2020/program/" target="_blank">ISCA 2020</a>!
 </p>
 
-<h2>About Me</h2>
-<p align="justify" style="text-align:justify" style="font-size:115%">
-	Since September 2019, I have been working as a Senior GPU Architect at <a href="https://www.arm.com" target="_blank">ARM</a>.
-	Prior to this I was a PhD student in the  <a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">Penn State University</a>. 
-	My thesis advisors are <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>, <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a> and <a href="http://www.cse.psu.edu/~axs53/" target="_blank">Dr. Anand Sivasubramaniam</a>. I have also collaborated with <a href="https://sites.psu.edu/vijaykrishnannarayanan/">Dr. Vijaykrishnan Narayanan (Penn State)</a> and <a href="https://people.inf.ethz.ch/omutlu/">Dr. Onur Mutlu (CMU)</a>.
-</p>
+
 
 <h2>PhD RESEARCH</h2>
 <p align="justify" style="text-align:justify" style="font-size:115%">
